# NovaPhy

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
compat/: build.md  compat.cmake
compat/scripts/: build-linux-gcc.py
demos/: demo_dam_break.py  demo_fluid_coupling.py  demo_robot_sim_pipeline.py  demo_stack.py  demo_utils.py  demo_vbd_contacts_gui.py  demo_vbd_joint_gui.py  demo_vbd_pyramid.py  demo_vbd_spring_gui.py  demo_vbd_stack_ratio.py  ppo_inverted_pendulum.py
include/novaphy/: novaphy.h  novaphy_config.h.in
include/novaphy/core/: model.h  model_builder.h
include/novaphy/dynamics/: free_body_solver.h  integrator.h
include/novaphy/fluid/: fluid_world.h  pbf_solver.h
include/novaphy/sim/: state.h  world.h
include/novaphy/vbd/: vbd_collide.h  vbd_config.h  vbd_solver.h  vbd_world.h
python/bindings/: CMakeLists.txt  bind_fluid.cpp  bind_main.cpp  bind_sim.cpp  bind_vbd.cpp
python/novaphy/: __init__.py  viz.py
src/: CMakeLists.txt
src/collision/: narrowphase.cpp
src/core/: model_builder.cpp
src/dynamics/: free_body_solver.cpp  integrator.cpp
src/fluid/: fluid_world.cpp  pbf_solver.cpp
src/io/: scene_builder.cpp  urdf_parser.cpp
src/ipc/: CMakeLists.txt  ipc_world.cpp
src/sim/: state.cpp  world.cpp
src/vbd/: CMakeLists.txt  vbd_collide.cpp  vbd_solver.cpp  vbd_world.cpp
tests/cmake_project/add_subdirectory/: CMakeLists.txt  main.cpp
tests/cmake_project/find_package/: CMakeLists.txt
tests/python/: test_demo_robot_pipeline.py  test_free_body_sim.py  test_io_pipeline.py
